Worked on ui integration